last commit : bye bye my project

--- a/src/app/pages/e-learning-config/components/about-us-config/about-us-config.component.html
+++ b/src/app/pages/e-learning-config/components/about-us-config/about-us-config.component.html
@@ -320,6 +320,13 @@
 
           <div nz-col [nzSpan]="8">
             <span class="text-label">
+              Ảnh bên trái (Kích thước: 719 x 612)
+            </span>
+            <app-file-selector formControlName="imageLeft"></app-file-selector>
+          </div>
+
+          <div nz-col [nzSpan]="8">
+            <span class="text-label">
               Tiêu đề
             </span>
             <input nz-input formControlName="title">
