--- a/src/app/pages/e-learning-student/components/registering-e-student/registering-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/registering-e-student/registering-e-student.component.html
@@ -16,12 +16,12 @@
     >
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="{{ 'created_at' | translate }}" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
-      <table-column header="{{ 'course' | translate }}" key="" [width]="'180px'"></table-column>
+      <table-column header="{{ 'course' | translate }}" key="elearningName" [width]="'180px'"></table-column>
       <table-column header="{{ 'learner_name' | translate }}" key="fullName" [width]="'180px'"></table-column>
-      <table-column header="{{ 'phone_number' | translate }}" key="mobile" [width]="'120px'"></table-column>
+      <table-column header="{{ 'phone_number' | translate }}" key="phoneNumber" [width]="'120px'"></table-column>
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="{{ 'learner_code' | translate }}" key="code" [width]="'180px'"></table-column>
-      <table-column header="{{ 'referrer' | translate }}" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="{{ 'referrer' | translate }}" key="caregiverName" [width]="'180px'"></table-column>
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="{{ 'payment_status' | translate }}" key="status" [width]="'180px'">
         <ng-template appCell let-data>
