--- a/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
@@ -25,7 +25,7 @@
       <table-column header="{{ 'referrer' | translate }}" key="userRef" [width]="'180px'"></table-column>
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="{{ 'teacher_name' | translate }}" key="" [width]="'180px'"></table-column>
-      <table-column header="{{ 'caring_by' | translate }}" key="caregiverName" [width]="'180px'"></table-column>
+      <table-column header="{{ 'caring_by' | translate }}" key="userRefName" [width]="'180px'"></table-column>
       <table-column header="{{ 'status' | translate }}" key="status" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">Kích hoạt</span>
